allow read access into the maven repository folder and sub-folders since some plugins rely on that (e.g., junit5)